--- a/main.css
+++ b/main.css
@@ -52,6 +52,7 @@ h1 {
     transform: scale(0.94);
     animation: scale 2s forwards cubic-bezier(0.5, 1, 0.89, 1);
     font-weight: normal;
+    color: rgb(161, 161, 161);
 
 
 
